@@ -2,6 +2,9 @@ pciutils (1:3.7.0-4) UNRELEASED; urgency=medium
 
   * Remove fortify.patch unnecessary since 3.6.4 where this was fixed upstream
     in a different way.
+  * Update patches meta-information:
+    - Add Forwarded meta-fields.
+    - Switch a literal Debian bug URL into a Bug-Debian meta-field.
 
  -- Guillem Jover <guillem@debian.org>  Wed, 23 Sep 2020 20:08:26 +0200
 
